--- a/sandboxer/sandboxer.csproj
+++ b/sandboxer/sandboxer.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RuntimeException.cs" />
+    <Compile Include="SandboxerGlobalSetting.cs" />
     <Compile Include="states_log_modes_confs.cs" />
     <Compile Include="WinSandboxManagager.cs" />
   </ItemGroup>
