--- a/sandboxer/packages.config
+++ b/sandboxer/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommandLineParser" version="2.8.0" targetFramework="net472" />
   <package id="Microsoft.PowerShell.5.ReferenceAssemblies" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.PowerShell.Commands.Utility" version="7.2.1" targetFramework="net472" />
-  <package id="NDesk.Options.Core" version="1.2.5" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.CodeDom" version="6.0.0" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="6.0.0" targetFramework="net472" />
