--- a/interactiveSandboxer/interactiveSandboxer.csproj
+++ b/interactiveSandboxer/interactiveSandboxer.csproj
@@ -66,6 +66,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SandboxerUI.resx">
+      <DependentUpon>SandboxerUI.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
